--- a/graphics-test.html
+++ b/graphics-test.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Graphics test</title>
-    <script src="graphics-test.js"></script>
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+        #c {
+            width: 100%;
+            height: 100%;
+            display: block;
+        }
+    </style>
 </head>
 <body>
 <canvas id="c"></canvas>
+<script src="graphics-test.js"></script>
 </body>
 </html>
